// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`blog plugin works on blog tags without pagination 1`] = `
{
  "/blog/tags/tag-1": {
    "items": [
      "/simple/slug/another",
      "/another/tags",
      "/another/tags2",
    ],
    "label": "tag1",
    "pages": [
      {
        "items": [
          "/simple/slug/another",
          "/another/tags",
          "/another/tags2",
        ],
        "metadata": {
          "blogDescription": "Blog",
          "blogTitle": "Blog",
          "nextPage": undefined,
          "page": 1,
          "permalink": "/blog/tags/tag-1",
          "postsPerPage": 3,
          "previousPage": undefined,
          "totalCount": 3,
          "totalPages": 1,
        },
      },
    ],
    "permalink": "/blog/tags/tag-1",
    "unlisted": false,
  },
  "/blog/tags/tag-2": {
    "items": [
      "/another/tags",
      "/another/tags2",
    ],
    "label": "tag2",
    "pages": [
      {
        "items": [
          "/another/tags",
          "/another/tags2",
        ],
        "metadata": {
          "blogDescription": "Blog",
          "blogTitle": "Blog",
          "nextPage": undefined,
          "page": 1,
          "permalink": "/blog/tags/tag-2",
          "postsPerPage": 2,
          "previousPage": undefined,
          "totalCount": 2,
          "totalPages": 1,
        },
      },
    ],
    "permalink": "/blog/tags/tag-2",
    "unlisted": false,
  },
  "/blog/tags/unlisted": {
    "items": [
      "/another/blog-with-tags-unlisted",
    ],
    "label": "unlisted",
    "pages": [
      {
        "items": [
          "/another/blog-with-tags-unlisted",
        ],
        "metadata": {
          "blogDescription": "Blog",
          "blogTitle": "Blog",
          "nextPage": undefined,
          "page": 1,
          "permalink": "/blog/tags/unlisted",
          "postsPerPage": 1,
          "previousPage": undefined,
          "totalCount": 1,
          "totalPages": 1,
        },
      },
    ],
    "permalink": "/blog/tags/unlisted",
    "unlisted": false,
  },
}
`;

exports[`blog plugin works with blog tags 1`] = `
{
  "/blog/tags/tag-1": {
    "items": [
      "/simple/slug/another",
      "/another/tags",
      "/another/tags2",
    ],
    "label": "tag1",
    "pages": [
      {
        "items": [
          "/simple/slug/another",
          "/another/tags",
        ],
        "metadata": {
          "blogDescription": "Blog",
          "blogTitle": "Blog",
          "nextPage": "/blog/tags/tag-1/page/2",
          "page": 1,
          "permalink": "/blog/tags/tag-1",
          "postsPerPage": 2,
          "previousPage": undefined,
          "totalCount": 3,
          "totalPages": 2,
        },
      },
      {
        "items": [
          "/another/tags2",
        ],
        "metadata": {
          "blogDescription": "Blog",
          "blogTitle": "Blog",
          "nextPage": undefined,
          "page": 2,
          "permalink": "/blog/tags/tag-1/page/2",
          "postsPerPage": 2,
          "previousPage": "/blog/tags/tag-1",
          "totalCount": 3,
          "totalPages": 2,
        },
      },
    ],
    "permalink": "/blog/tags/tag-1",
    "unlisted": false,
  },
  "/blog/tags/tag-2": {
    "items": [
      "/another/tags",
      "/another/tags2",
    ],
    "label": "tag2",
    "pages": [
      {
        "items": [
          "/another/tags",
          "/another/tags2",
        ],
        "metadata": {
          "blogDescription": "Blog",
          "blogTitle": "Blog",
          "nextPage": undefined,
          "page": 1,
          "permalink": "/blog/tags/tag-2",
          "postsPerPage": 2,
          "previousPage": undefined,
          "totalCount": 2,
          "totalPages": 1,
        },
      },
    ],
    "permalink": "/blog/tags/tag-2",
    "unlisted": false,
  },
  "/blog/tags/unlisted": {
    "items": [
      "/another/blog-with-tags-unlisted",
    ],
    "label": "unlisted",
    "pages": [
      {
        "items": [
          "/another/blog-with-tags-unlisted",
        ],
        "metadata": {
          "blogDescription": "Blog",
          "blogTitle": "Blog",
          "nextPage": undefined,
          "page": 1,
          "permalink": "/blog/tags/unlisted",
          "postsPerPage": 2,
          "previousPage": undefined,
          "totalCount": 1,
          "totalPages": 1,
        },
      },
    ],
    "permalink": "/blog/tags/unlisted",
    "unlisted": false,
  },
}
`;
